# simple-toolbox

./: .env.example  .gitignore  main.py  pyproject.toml
db_1/: agent.ipynb  docker-compose.yml  init.sql  toolbox-client.ipynb  tools.yaml
db_2/: load-data.ipynb
db_2/models/: __init__.py  models.py
db_2/pgvector_db/: check-pg-vector.ipynb  docker-compose.yml  embedding-api.ipynb  run-database-init.ipynb  toolbox-client.ipynb  tools.yaml
