[project]
name = "simple-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-cloud-aiplatform>=1.153.1",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-google-vertexai>=3.2.3",
    "langgraph>=1.2.0",
    "notebook>=7.5.6",
    "toolbox-langchain>=1.0.1",
]
